--- a/modulo_1/package.json
+++ b/modulo_1/package.json
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "vue": "^3.5.13",
-    "pinia": "^2.1.7"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.4.5",
-    "vue-tsc": "^2.0.6",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.0.6"
   }
 }
-
