--- a/modulo_1/package.json
+++ b/modulo_1/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "vue": "^3.5.13",
-    "pinia": "^2.1.7"
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "^5.4.5",
-    "vue-tsc": "^2.0.6",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.0.6"
   }
 }
-
